test/fail/issue-2391.mo
func f<T>() {
  class C(x:T){ public let y = x};
};
